chore(release): add chore and docs sections to release config
- Add chore section for package-related changes
- Add docs section for documentation updates

--- a/.releaserc
+++ b/.releaserc
@@ -9,6 +9,14 @@
         {
           "type": "feat",
           "section": "🚀 Features"
+        },
+        {
+          "type": "chore",
+          "section": "📦 Chores"
+        },
+        {
+          "type": "docs",
+          "section": "📚 Documentation"
         }
       ]
     },
