--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,24 +5,26 @@ on:
 
 jobs:
   release:
-    name: "Release"
+    name: Release
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-        
+        uses: actions/checkout@v4
+
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '18'
-        
-      - name: Install dependencies
-        uses: pnpm/action-setup@v2.4.0
+          node-version: 22
+          cache: 'pnpm'
+
+      - name: Install Dependencies
+        uses: pnpm/action-setup@v3
         with:
           run_install: true
-        
+
       - name: Semantic Release
-        run: npm run semantic-release
+        run: pnpm dlx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
