--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Install Dependencies
         uses: pnpm/action-setup@v3
         with:
+          version: 10
           run_install: true
 
       - name: Semantic Release
