chore(build): update build process and add type checking
- Simplify prepack script in package.json
- Add test:types script for running Vue type-checking
- Update tsconfig.json to exclude playground and src directories

--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
     "dist"
   ],
   "scripts": {
-    "prepack": "nuxt-module-build build --stub && nuxi prepare playground && nuxt-module-build prepare",
+    "prepack": "nuxt-module-build build",
     "play": "nuxi dev playground",
     "play:build": "nuxi build playground",
-    "play:prepare": "nuxt-module-build build --stub && nuxi prepare playground",
-    "semantic-release": "semantic-release"
+    "play:prepare": "nuxt-module-build build --stub && nuxi prepare playground && nuxt-module-build prepare",
+    "semantic-release": "semantic-release",
+    "test:types": "vue-tsc --noEmit"
   },
   "dependencies": {
     "@nuxt/kit": "latest",
