--- a/.releaserc
+++ b/.releaserc
@@ -17,6 +17,30 @@
         {
           "type": "docs",
           "section": "📚 Documentation"
+        },
+        {
+          "type": "style",
+          "section": "💄 Styles"
+        },
+        {
+          "type": "refactor",
+          "section": "♻️ Refactoring"
+        },
+        {
+          "type": "test",
+          "section": "✅ Tests"
+        },
+        {
+          "type": "ci",
+          "section": "👷 CI"
+        },
+        {
+          "type": "perf",
+          "section": "⚡ Performance"
+        },
+        {
+          "type": "build",
+          "section": "📦 Build"
         }
       ]
     },
