fix: update exports configuration and release workflow
- Update package.json exports field to include types and default entries
- Modify release.yml to trigger on main branch pushes

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "exports": {
     ".": {
       "import": "./dist/module.mjs",
-      "require": "./dist/module.mjs"
+      "require": "./dist/module.mjs",
+      "types": "./dist/types.d.mts",
+      "default": "./dist/module.mjs"
     }
   },
   "main": "./dist/module.mjs",
