--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "dist"
   ],
   "scripts": {
-    "prepack": "nuxt-module-build build",
+    "prepack": "nuxt-module-build prepare && nuxt-module-build build",
     "play": "nuxi dev playground",
     "play:build": "nuxi build playground",
     "play:prepare": "nuxt-module-build build --stub && nuxi prepare playground && nuxt-module-build prepare",
