build(release): add release-it configuration for GitHub releases
- Add .release-it.json configuration file for GitHub releases
- Update package.json to include release-it dependency and release script
- Semantic-release is still available as a separate script

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "play:build": "nuxi build playground",
     "play:prepare": "nuxt-module-build build --stub && nuxi prepare playground && nuxt-module-build prepare",
     "semantic-release": "semantic-release",
-    "test:types": "vue-tsc --noEmit"
+    "test:types": "vue-tsc --noEmit",
+    "release": "pnpm dlx release-it@latest --only-version"
   },
   "dependencies": {
     "@nuxt/kit": "latest"
@@ -58,6 +59,7 @@
     "conventional-changelog-conventionalcommits": "^9.1.0",
     "eslint": "latest",
     "nuxt": "^4.2.2",
+    "release-it": "19.2.4",
     "semantic-release": "^25.0.2"
   }
 }
