--- a/.release-it.json
+++ b/.release-it.json
@@ -1,6 +1,22 @@
 {
   "$schema": "https://unpkg.com/release-it/schema/release-it.json",
+  "hooks": {
+    "after:bump": "pnpm dlx auto-changelog@latest -p"
+  },
+  "git": {
+    "commitMessage": "chore: release v${version}",
+    "requireBranch": "main",
+    "requireCleanWorkingDir": true,
+    "changelog": "pnpm dlx auto-changelog --stdout -u --unreleased-only --template conventional"
+  },
   "github": {
-    "release": true
-  }
+    "release": true,
+    "push": true,
+    "tag": true
+  },
+  "npm": {
+    "publish": true,
+    "private": true
+  },
+  "plugins": {}
 }
