chore(release): configure release-it for pnpm and update release script
- Add pnpm-specific configuration to .release-it.json
- Update release script in package.json to remove unnecessary version flag

--- a/.release-it.json
+++ b/.release-it.json
@@ -16,7 +16,9 @@
   },
   "npm": {
     "publish": true,
-    "private": true
+    "private": true,
+    "publishPackageManager": "pnpm",
+    "ignoreVersion": true
   },
   "plugins": {}
 }
