--- a/.release-it.json
+++ b/.release-it.json
@@ -1,13 +1,9 @@
 {
   "$schema": "https://unpkg.com/release-it/schema/release-it.json",
-  "hooks": {
-    "after:bump": "pnpm dlx auto-changelog@latest -p"
-  },
   "git": {
     "commitMessage": "chore: release v${version}",
     "requireBranch": "main",
-    "requireCleanWorkingDir": true,
-    "changelog": "pnpm dlx auto-changelog --stdout -u --unreleased-only --template conventional"
+    "requireCleanWorkingDir": true
   },
   "github": {
     "release": true,
@@ -16,9 +12,13 @@
   },
   "npm": {
     "publish": true,
-    "private": true,
-    "publishPackageManager": "pnpm",
-    "ignoreVersion": true
+    "private": false,
+    "publishPackageManager": "pnpm"
   },
-  "plugins": {}
+  "plugins": {
+    "@release-it/conventional-changelog": {
+      "preset": "angular",
+      "infile": "CHANGELOG.md"
+    }
+  }
 }
