--- a/.release-it.json
+++ b/.release-it.json
@@ -17,8 +17,51 @@
   },
   "plugins": {
     "@release-it/conventional-changelog": {
-      "preset": "angular",
-      "infile": "CHANGELOG.md"
+      "preset": "conventionalcommits",
+      "infile": "CHANGELOG.md",
+      "ignoreRecommendedBump": true,
+      "types": [
+        {
+          "type": "fix",
+          "section": "🐛 Bug Fixes"
+        },
+        {
+          "type": "feat",
+          "section": "🚀 Features"
+        },
+        {
+          "type": "chore",
+          "section": "📦 Chores"
+        },
+        {
+          "type": "docs",
+          "section": "📚 Documentation"
+        },
+        {
+          "type": "style",
+          "section": "💄 Styles"
+        },
+        {
+          "type": "refactor",
+          "section": "♻️ Refactoring"
+        },
+        {
+          "type": "test",
+          "section": "✅ Tests"
+        },
+        {
+          "type": "ci",
+          "section": "👷 CI"
+        },
+        {
+          "type": "perf",
+          "section": "⚡ Performance"
+        },
+        {
+          "type": "build",
+          "section": "📦 Build"
+        }
+      ]
     }
   }
 }
