--- a/package.json
+++ b/package.json
@@ -58,5 +58,8 @@
     "eslint": "latest",
     "nuxt": "^4.2.2",
     "release-it": "19.2.4"
+  },
+  "resolutions": {
+    "conventional-changelog-conventionalcommits": "9.1.0"
   }
 }
