--- a/.release-it.json
+++ b/.release-it.json
@@ -3,7 +3,7 @@
   "git": {
     "commitMessage": "chore: release v${version}",
     "requireBranch": "main",
-    "requireCleanWorkingDir": true
+    "requireCleanWorkingDir": false
   },
   "github": {
     "release": true,
