chore(release): update release configuration and version
- Update .release-it.json:
  - Set requireCleanWorkingDir to false
  - Change publishPackageManager from pnpm to npm
- Bump version in package.json from 1.0.5 to 1.0.6

--- a/.release-it.json
+++ b/.release-it.json
@@ -3,7 +3,7 @@
   "git": {
     "commitMessage": "chore: release v${version}",
     "requireBranch": "main",
-    "requireCleanWorkingDir": true
+    "requireCleanWorkingDir": false
   },
   "github": {
     "release": true,
@@ -13,7 +13,7 @@
   "npm": {
     "publish": true,
     "private": false,
-    "publishPackageManager": "pnpm",
+    "publishPackageManager": "npm",
     "ignoreVersion": true
   },
   "plugins": {
