chore(release): enable conventional version checking
- Set "ignoreVersion" to false in .release-it.json to enable conventional version checking
- Ensure release-it tool respects version conventions

--- a/.release-it.json
+++ b/.release-it.json
@@ -14,7 +14,7 @@
     "publish": true,
     "private": false,
     "publishPackageManager": "npm",
-    "ignoreVersion": true
+    "ignoreVersion": false
   },
   "plugins": {
     "@release-it/conventional-changelog": {
