chore(deps): update release-it and related dependencies
- Update @release-it/conventional-changelog to 10.0.4
- Add conventional-changelog-conventionalcommits dependency
- Update nuxt to ^4.2.2
- Remove resolutions field

--- a/package.json
+++ b/package.json
@@ -55,11 +55,9 @@
     "@nuxt/module-builder": "latest",
     "@nuxtjs/eslint-config-typescript": "latest",
     "@release-it/conventional-changelog": "10.0.4",
+    "conventional-changelog-conventionalcommits": "9.1.0",
     "eslint": "latest",
     "nuxt": "^4.2.2",
     "release-it": "19.2.4"
-  },
-  "resolutions": {
-    "conventional-changelog-conventionalcommits": "9.1.0"
   }
 }
